# django-simple-redirects

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
sane_redirects/: __init__.py  admin.py  apps.py  middleware.py  models.py
sane_redirects/migrations/: 0001_initial.py
simple_redirects/: __init__.py  admin.py  apps.py  middleware.py  models.py
simple_redirects/migrations/: 0001_initial.py
testapp/: __init__.py  runtests.py  settings.py  test_redirects.py  urls.py
tests/testapp/: settings.py  test_redirects.py  urls.py
