[metadata]
name = django_sane_redirects
version = attr: sane_redirects.__version__
description = django.contrib.redirects without django.contrib.sites
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/feinheit/django-sane-redirects/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
include_package_data = True

[options.extras_require]
tests =
    coverage

[options.packages.find]
exclude =
    tests
    testapp

[flake8]
exclude = venv,build,docs,.tox,migrations
max-complexity = 10
max-line-length = 88

[isort]
profile = black
combine_as_imports = True
lines_after_imports = 2

[coverage:run]
branch = True
include =
    *sane_redirects*
omit =
    *migrations*
    *tests*
    *.tox*
