[metadata]
name = django_simple_redirects
version = attr: simple_redirects.__version__
description = django.contrib.redirects without django.contrib.sites
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/feinheit/django-simple-redirects/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
install_requires =
    Django>=3.2
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
tests =
    coverage

[coverage:run]
branch = True
include =
    *simple_redirects*
omit =
    *migrations*
    *.tox*
